--- a/app/package.json
+++ b/app/package.json
@@ -17,11 +17,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "^52.0.4",
+    "expo": "^52.0.11",
     "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.2",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
+    "expo-location": "~18.0.2",
     "expo-router": "~4.0.2",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
@@ -30,7 +31,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
