--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "^52.0.11",
+    "dotenv": "^16.4.5",
+    "expo": "^52.0.4",
     "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.2",
     "expo-font": "~13.0.1",
