--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "expo-linking": "~7.0.2",
     "expo-location": "~18.0.2",
     "expo-router": "~4.0.2",
+    "expo-sms": "^13.0.0",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
@@ -38,6 +39,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-send-direct-sms": "^0.2.0",
+    "react-native-sms": "^1.12.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
