--- a/app/package.json
+++ b/app/package.json
@@ -16,8 +16,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.0",
     "@mapbox/polyline": "^1.2.1",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^6.0.2",
     "dotenv": "^16.4.5",
     "expo": "^52.0.4",
@@ -43,7 +43,8 @@
     "react-native-screens": "~4.0.0",
     "react-native-send-direct-sms": "^0.2.0",
     "react-native-sms": "^1.12.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
